--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#c5ff00">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#000000">
-		<!-- Load css styles -->
+		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery.cslider.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css">
-		<!-- Include javascript -->
+		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
 		<script defer src="js/jquery.cslider.min.js"></script>
@@ -331,7 +331,7 @@
 									<div><a href="downloads/images/DietPi_OdroidXU4-ARMv7-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>The XU4 is a powerhouse performance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95'c and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-Cloudshell and DietPi-Cloudshell stats!</p>
+								<p>The XU4 is a powerhouse performance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95'c and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-CloudShell and DietPi-CloudShell stats!</p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/odroidxu4.jpg" alt="Odroid XU4 photo" loading="lazy"></div>
@@ -844,7 +844,7 @@
 									<div><a href="downloads/images/DietPi_NanoPiNEO2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>An upgrade to the original Nano NEO, now features H5 64-bit CPU and Gbit LAN. Quite possibly the smallest (and cutest) SBC on the market. Great for headless/IoT/NAS/server/Hi-Fi projects and showing old friends how small computers have become.</p>
+								<p>An upgrade to the original Nano NEO, now features H5 64-bit CPU and Gbit LAN. Quite possibly the smallest (and cutest) SBC on the market. Great for headless/IoT/NAS/server/HiFi projects and showing old friends how small computers have become.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -1864,8 +1864,8 @@
 			</div>
 		</div>
 		<!-- Footer section end -->
-		<!-- ScrollUp button start -->
+		<!-- Scroll up button start -->
 		<a class="scrollup fa fa-chevron-up" href="#"></a>
-		<!-- ScrollUp button end -->
+		<!-- Scroll up button end -->
 	</body>
 </html>
