--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -478,7 +478,7 @@
 									<span>Cons:</span>N/A.
 								</div>
 							</div>
-							<p>A feature-rich python based music player with a web based interface. Mopidy is also highly customisable and supports various extensions from Web extensions to Backend extensions.</p>
+							<p>A feature-rich python based music player with a web based interface. Mopidy is also highly customisable and supports various extensions from web extensions to backend extensions.</p>
 						</div>
 					</div>
 				</div>
@@ -2126,7 +2126,7 @@ Perfect for users requiring anonymity and privacy.</p>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
-								<h3>AudioPhonics Pi-SPC</h3>
+								<h3>Audiophonics Pi-SPC</h3>
 								<span class="show_hide close"><i class="fa fa-times"></i></span>
 							</div>
 							<div class="project-info">
@@ -2571,7 +2571,7 @@ Perfect for users requiring anonymity and privacy.</p>
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>W</code>eb <code>AR</code>chive) file, and simply drop it in the deploy directory in Tomcat. </p>
+							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat. </p>
 						</div>
 					</div>
 				</div>
@@ -2615,7 +2615,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								</div>
 								<div>
 									<br>
-									<span>Pros:</span>One the fastest files ervers we have available
+									<span>Pros:</span>One the fastest files servers we have available
 								</div>
 								<div>
 									<span>Cons:</span>May not meet security needs. However, ideal for home LAN in most cases.
@@ -3921,7 +3921,7 @@ Perfect for users requiring anonymity and privacy.</p>
 						<div class="thumbnail">
 							<img src="images/dietpi-software/pispc_0.jpg" alt="project 79" loading="lazy">
 							<a href="#downloadinfo" class="more show_hide" rel="#slidingdiv79"><i class="fa fa-plus"></i></a>
-							<h3>AudioPhonics Pi-SPC</h3>
+							<h3>Audiophonics Pi-SPC</h3>
 							<p>Power control module for RPi</p>
 							<div class="mask"></div>
 						</div>
