--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -1620,7 +1620,7 @@ TLDR: Basically, it allows you to create a complete system backup, using a simpl
 				</div>
 				<!-- Start details for portfolio project 59 -->
 				<div id="slidingdiv59" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/syncthing_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/syncthing_1.jpg" alt="Synthing" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/syncthing_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/syncthing_1.jpg" alt="Syncthing" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2349,7 +2349,7 @@ Perfect for users requiring anonymity and privacy.</p>
 				</div>
 				<!-- Start details for portfolio project 88 -->
 				<div id="slidingdiv88" class="toggleDiv row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/netdata_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/netdata_1.jpg" alt="Netdada" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/netdata_2.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/netdata_1.jpg" alt="Netdata" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
