Element "p" not allowed as child of element "ul" or the other way round

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -116,11 +116,10 @@
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
+							<br>
 							<ul>
-								<p>
-									<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-									<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-								</p>
+								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
+								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
 							</ul>
 						</div>
 					</div>
@@ -147,11 +146,10 @@
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
+							<br>
 							<ul>
-								<p>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
 								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-								</p>
 							</ul>
 						</div>
 					</div>
@@ -177,11 +175,10 @@
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
+							<br>
 							<ul>
-								<p>
-									<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
-									<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-								</p>
+								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
+								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
 							</ul>
 						</div>
 					</div>
@@ -207,11 +204,10 @@
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
+							<br>
 							<ul>
-								<p>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
 								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-								</p>
 							</ul>
 						</div>
 					</div>
@@ -236,20 +232,18 @@
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
-							<p>
-								<b>Does my device support HW GPU acceleration?:</b>
-								<ul>
-									<li>RPi 2+ supports native OpenGL and will be configured during installation.</li>
-									<li>Odroid's support OpenGLES and will be configured during installation.</li>
-									<li>Other devices will most likely be limited to software rendering.</li>
-									<li>You can check the status of HW GPU acceleration by accessing the following URL in Chromium <b style="color:orange">chrome://gpu</b>.</li>
-								</ul>
-								<b>Launch options?:</b>
-								<ul>
-									<li>Chromium can be launched from any desktop environment.</li>
-									<li>You can also run Chromium in kiosk mode (no desktop required), by running <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Chromium</b>.</li>
-								</ul>
-							</p>
+							<p><b>Does my device support HW GPU acceleration?</b></p>
+							<ul>
+								<li>RPi 2+ supports native OpenGL and will be configured during installation.</li>
+								<li>Odroid's support OpenGLES and will be configured during installation.</li>
+								<li>Other devices will most likely be limited to software rendering.</li>
+								<li>You can check the status of HW GPU acceleration by accessing the following URL in Chromium <b style="color:orange">chrome://gpu</b>.</li>
+							</ul>
+							<p><b>Launch options?</b></p>
+							<ul>
+								<li>Chromium can be launched from any desktop environment.</li>
+								<li>You can also run Chromium in kiosk mode (no desktop required), by running <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Chromium</b>.</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -3146,11 +3140,10 @@ Perfect for users requiring anonymity and privacy.</p>
 							<div class="project-title clearfix">
 								<h3></h3>
 							</div>
+							<br>
 							<ul>
-								<p>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
 								<li>You can also have DietPi boot directly to the desktop by using <b style="color:orange">dietpi-autostart</b> and selecting <b style="color:orange">Desktop</b>.</li>
-								</p>
 							</ul>
 						</div>
 					</div>
