Create initial GitHub Actions workflow (#9)

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
 		<link rel="mask-icon" href="images/dietpi-logo_mask_720x720.svg" color="#c5ff00">
 		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#000000">
-		<!-- Load css styles -->
+		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/fonts.min.css">
 		<link rel="stylesheet" type="text/css" href="css/jquery.cslider.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.min.css">
-		<!-- Include javascript -->
+		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js"></script>
 		<script defer src="js/jquery.cslider.min.js"></script>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-4 service">
-						<a href="phpbb/viewtopic.php?p=279#p279" target="_blank" rel="noopener">
+						<a href="phpbb/viewtopic.php?p=5393#p5393" target="_blank" rel="noopener">
 							<img class="circle-border zoom-in" src="images/dietpi-services.png" alt="CPU icon" loading="lazy">
 							<h3>DietPi-Services Control</h3>
 						</a>
@@ -252,7 +252,7 @@
 										<br>This image has our <a href="phpbb/viewtopic.php?f=8&t=2317" target="_blank" rel="noopener" style="color:#c5ff00; text-decoration:underline;">Allo web GUI</a> and audiophile software pre-installed.
 									</div>
 								</div>
-								<p>The Raspberry Pi is quite possibily the single SBC that started the IoT era. While the Raspberry Pi may be a few years behind other SBC manufacturers in terms of performance, it's widely available, affordable, has a large community, active kernel development for all models and will always have a place in our hearts.</p>
+								<p>The Raspberry Pi is quite possibly the single SBC that started the IoT era. While the Raspberry Pi may be a few years behind other SBC manufacturers in terms of performance, it's widely available, affordable, has a large community, active kernel development for all models and will always have a place in our hearts.</p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/raspberrypi3.jpg" alt="Raspberry Pi photo" loading="lazy"></div>
@@ -275,7 +275,7 @@
 									<div><span>RAM:</span>1 GiB DDR3</div>
 									<div>
 										<span>Known issues:</span>No HDMI output, serial console only<br>
-										<span></span>No eMMC support, limited USB hotplug support
+										<span></span>No eMMC support, limited USB hot-plug support
 									</div>
 									<br>
 									<div><a href="downloads/images/DietPi_OdroidC1-ARMv7-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
@@ -331,7 +331,7 @@
 									<div><a href="downloads/images/DietPi_OdroidXU4-ARMv7-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>The XU4 is a powerhouse peformance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95'c and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-Cloudshell and DietPi-Cloudshell stats!</p>
+								<p>The XU4 is a powerhouse performance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95'c and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-CloudShell and DietPi-CloudShell stats!</p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/odroidxu4.jpg" alt="Odroid XU4 photo" loading="lazy"></div>
@@ -352,11 +352,12 @@
 								<div class="project-info">
 									<div><span>CPU:</span>A64 1.2 GHz | 4 cores | ARMv8</div>
 									<div><span>RAM:</span>512 MiB - 2 GiB DDR3</div>
+									<div><span>NET:</span>Gbit Ethernet</div>
 									<br>
 									<div><a href="downloads/images/DietPi_PineA64-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>PINE A64 was the worlds first "kickstarted" SBC (AFAIK). Featuring a 64bit CPU and up to 2 GiB RAM with 1GBit LAN. The PINE A64 shows promise for future kickstarted SBCs, albeit, the PINE A64 board is somewhat cumbersome.</p>
+								<p>PINE A64 was the worlds first "kickstarted" SBC (AFAIK). Featuring a 64-bit CPU and up to 2 GiB RAM with Gbit Ethernet. The PINE A64 shows promise for future kickstarted SBCs, albeit, the PINE A64 board is somewhat cumbersome.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -492,7 +493,7 @@
 									<div><a href="downloads/images/DietPi_NanoPiM3-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>Small SBC with lots of features. 8 core powerhouse, great for multithreaded programs like Plex Media Server</p>
+								<p>Small SBC with lots of features. 8 core powerhouse, great for multi-threaded programs like Plex Media Server</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -548,7 +549,7 @@
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
 								<p>The Pinebook is a phenomenal Linux laptop with exceptional build quality that rivals £300+ laptops. The unit is fitted with an exceptionally bright 1080p IPS screen, eMMC and onboard WiFi.</p>
-								<p>When considering all this only costs $99, you'd be silly not to pick one up. Highly recommended for anyone who loves SBC's with an expected light workload use. An ARM laptop done right, and then some!</p>
+								<p>When considering all this only costs $99, you'd be silly not to pick one up. Highly recommended for anyone who loves SBCs with an expected light workload use. An ARM laptop done right, and then some!</p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/pinebooka64.jpg" alt="Pinebook photo" loading="lazy"></div>
@@ -593,7 +594,7 @@
 							<div class="project-description">
 								<div class="project-info">
 									<div><span>CPU:</span>S922X 1.8 GHz | 6 cores | ARMv8</div>
-									<div><span>RAM:</span>4 GiB DDR4 1320 Mhz</div>
+									<div><span>RAM:</span>4 GiB DDR4 1320 MHz</div>
 									<div><span>NET:</span>Gbit Ethernet</div>
 									<div><span>Storage:</span>eMMC socket</div>
 									<br>
@@ -734,7 +735,7 @@
 										<br>This image has our <a href="phpbb/viewtopic.php?f=8&t=2317" target="_blank" rel="noopener" style="color:#c5ff00; text-decoration:underline;">Allo web GUI</a> and audiophile software pre-installed.
 									</div>
 								</div>
-								<p>The Allo Sparky SBC is unique, in the way its been designed for Audiophile usage at its core. By attaching a Kali re-clocker, Allo Piano DAC and Volt+, this system becomes the ultimate in high end audio quality and playback. If you love your audio and want the very best in audio quality, Sparky SBC coupled with the available audio HATs, is the complete Audiophile SBC solution.</p>
+								<p>The Allo Sparky SBC is unique, in the way its been designed for Audiophile usage at its core. By attaching a Kali Reclocker, Allo Piano DAC and Volt+, this system becomes the ultimate in high end audio quality and playback. If you love your audio and want the very best in audio quality, Sparky SBC coupled with the available audio HATs, is the complete Audiophile SBC solution.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -788,7 +789,7 @@
 									<div><a href="downloads/images/DietPi_NanoPiFire3-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>The NanoPi M3's "Mini-Me". 8 core powerhouse, great for multithreaded programs like Plex Media Server, all wrapped up into a nano sized SBC device. The CPU runs hot under full CPU load, so if you plan to run this at full load, make sure to obtain an upgraded heatsink (as the default is insufficient).</p>
+								<p>The NanoPi M3's "Mini-Me". 8 core powerhouse, great for multi-threaded programs like Plex Media Server, all wrapped up into a nano sized SBC device. The CPU runs hot under full CPU load, so if you plan to run this at full load, make sure to obtain an upgraded heat sink (as the default is insufficient).</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -843,7 +844,7 @@
 									<div><a href="downloads/images/DietPi_NanoPiNEO2-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>An upgrade to the original Nano NEO, now features H5 64-bit CPU and Gbit LAN. Quite possibily the smallest (and cutest) SBC on the market. Great for headless/IoT/NAS/server/HiFi projects and showing old friends how small computers have become.</p>
+								<p>An upgrade to the original Nano NEO, now features H5 64-bit CPU and Gbit LAN. Quite possibly the smallest (and cutest) SBC on the market. Great for headless/IoT/NAS/server/HiFi projects and showing old friends how small computers have become.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -882,7 +883,7 @@
 				<div id="slidingdiv25" class="toggleDiv single-project">
 					<div class="row">
 						<div class="col-md-12 project-title clearfix">
-							<h3>FireFly RK3399 (beta)</h3>
+							<h3>Firefly RK3399 (beta)</h3>
 							<span class="show_hide close"><i class="fa fa-times"></i></span>
 						</div>
 					</div>
@@ -900,7 +901,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/fireflyrk3399.jpg" alt="FireFly RK3399 photo" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/fireflyrk3399.jpg" alt="Firefly RK3399 photo" loading="lazy"></div>
 					</div>
 				</div>
 				<!-- End details for portfolio project 25 -->
@@ -944,7 +945,7 @@
 						<div class="col-md-6">
 							<div class="project-description">
 								<div class="project-info">
-									<div><span>CPU:</span>Rockchip RK3399 1.8 Ghz/1.4 Ghz | 6 cores | ARMv8</div>
+									<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
 									<div><span>RAM:</span>4 GiB LPDDR4</div>
 									<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 									<div><span>Storage:</span>eMMC socket</div>
@@ -1067,7 +1068,7 @@
 									<div><a href="downloads/images/DietPi_Rock64-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>A welcomed evolution of the PINE64 is finally here. Reduced PCB size, low cost, USB 3.0, GBit LAN and eMMC option. A worthy SBC for any server/NAS project.</p>
+								<p>A welcomed evolution of the PINE64 is finally here. Reduced PCB size, low cost, USB 3.0, Gbit Ethernet and eMMC option. A worthy SBC for any server/NAS project.</p>
 								<p><i style="color:grey;font-size:80%;">NB: Full GPU features are not currently available for this device, at this time, e.g. Kodi or accelerated desktop. Ideal for server usage.</i></p>
 							</div>
 						</div>
@@ -1096,7 +1097,7 @@
 									</div>
 									<div><a href="docs/user-guide_installation/" target="_blank" rel="noopener"><span>How to install / Details:</span> <i class="fa fa-book" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">View</u></a></div>
 								</div>
-								<p>The Native PC is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience. This image is for motherboards with UEFI boot support and onboard EMMC (eg: Z83-II, Beelink AP32 and other Intel NUC/SBC devices with onboard eMMC).</p>
+								<p>The Native PC is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience. This image is for motherboards with UEFI boot support and onboard EMMC (e.g.: Z83-II, Beelink AP32 and other Intel NUC/SBC devices with onboard eMMC).</p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/nativepc.jpg" alt="PC logo" loading="lazy"></div>
@@ -1121,7 +1122,7 @@
 								</div>
 								<p>Unable to find an available image for your device? No worries, DietPi can be easily installed on any device!</p>
 								<p>Simply run the DietPi-PREP script in the above link and follow the onscreen instructions.</p>
-								<p><i style="color:grey;font-size: 80%;">NB: End user support will be limited to issues that are DietPi specific (which excludes Kernel/GPU/onboard BT+WiFi+Audio etc from our support). GPU features are disabled for other devices (eg: Kodi, Desktop), ideal for server usage.</i></p>
+								<p><i style="color:grey;font-size: 80%;">NB: End user support will be limited to issues that are DietPi specific (which excludes Kernel/GPU/onboard Bluetooth, WiFi, Audio etc from our support). GPU features are disabled for other devices (e.g.: Kodi, Desktop), ideal for server usage.</i></p>
 							</div>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/otherdevice.jpg" alt="Question mark" loading="lazy"></div>
@@ -1169,7 +1170,7 @@
 								<div class="project-info">
 									<div><span>CPU:</span>Rockchip RK3308 Cortex-A35 | 4 cores | ARMv8</div>
 									<div><span>RAM:</span>256 MiB - 512 MiB DDR3</div>
-									<div><span>NET:</span>Gbit Ethernet, WiFi, Blutooth</div>
+									<div><span>NET:</span>Gbit Ethernet, WiFi, Bluetooth</div>
 									<div><span>Storage:</span>Optional onboard SD NAND</div>
 									<br>
 									<div><a href="downloads/images/DietPi_ROCKPiS-ARMv8-Buster.7z"><span>Download Image:</span> <i class="fa fa-download" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;<u style="font-size:133%;">Download</u></a></div>
@@ -1813,7 +1814,7 @@
 						<p>
 							"My first Raspberry Pi experience, installed DietPi and it works like charm. Many thanks and my compliments to the makers/developers !!
 							<br>This is a fantastic piece of work !
-							<br>I have build a music streamer: Raspberry Zero W (headless), Justboom Digi Zero pHat, Sandisk 400 GB MicroSD, MPD/O!MPD"
+							<br>I have build a music streamer: Raspberry Zero W (headless), JustBoom Digi Zero pHAT, SanDisk 400 GB microSD card, MPD/O!MPD"
 						</p>
 						<div class="whopic"><div class="arrow"></div><strong>maarten, DietPi Forum</strong></div>
 					</div>
@@ -1831,7 +1832,7 @@
 					</div>
 				</div>
 				<div class="testimonial-text">
-					<p>"Just wanted to say thank you for DietPi. As someone who's intermediate at best with Linux and SBCs in general, its made everything so much more accessible. I don't have that much time to tinker and I need things to generally work out of the box with little fuss. Dietpi has made it possible for me to be running Nextcloud, PiHole, NZBGet and more on a Pi4 with minimal effort. Sure Docker could do the same but there is something about running things natively that I like.
+					<p>"Just wanted to say thank you for DietPi. As someone who's intermediate at best with Linux and SBCs in general, its made everything so much more accessible. I don't have that much time to tinker and I need things to generally work out of the box with little fuss. Dietpi has made it possible for me to be running Nextcloud, Pi-hole, NZBGet and more on a Pi4 with minimal effort. Sure Docker could do the same but there is something about running things natively that I like.
 					<br>Automation features like Dietpi Backup and Drive Manager are just the icing on the cake to a great eco-system.
 					<br>Thank you for Dietpi."</p>
 					<div class="whopic"><div class="arrow"></div><strong>Reds, DietPi Forum</strong></div>
@@ -1863,8 +1864,8 @@
 			</div>
 		</div>
 		<!-- Footer section end -->
-		<!-- ScrollUp button start -->
+		<!-- Scroll up button start -->
 		<a class="scrollup fa fa-chevron-up" href="#"></a>
-		<!-- ScrollUp button end -->
+		<!-- Scroll up button end -->
 	</body>
 </html>
