Install and run html5validator manually (#12)
* Install and run html5validator manually
* Remove obsolete empty header and class from separator element
* Remove deprecated version attribute from svg tag

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -113,9 +113,7 @@
 								</div>
 							</div>
 							<p>Highly optimized lightweight desktop without the bloatware. If you are seeking a raw performance desktop, LXDE is all you need. One of the lightest and functional desktops available. One of our favourites!</p>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<br>
 							<ul>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
@@ -143,9 +141,7 @@
 								</div>
 							</div>
 							<p>Popular Gnome2 (a time when Gnome wasn't obsessively bloated) based desktop environment.</p>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<br>
 							<ul>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
@@ -172,9 +168,7 @@
 								</div>
 							</div>
 							<p>A popular lightweight desktop. Does not perform as well as LXDE/MATE.</p>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<br>
 							<ul>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
@@ -201,9 +195,7 @@
 								</div>
 							</div>
 							<p>Unique desktop</p>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<br>
 							<ul>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
@@ -229,9 +221,7 @@
 									<span>Cons:</span>TBA
 								</div>
 							</div>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<p><b>Does my device support HW GPU acceleration?</b></p>
 							<ul>
 								<li>RPi 2+ supports native OpenGL and will be configured during installation.</li>
@@ -3137,9 +3127,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								</div>
 							</div>
 							<p>Slick and feature rich, lightweight desktop. If you are seeking a good performance desktop that looks and feels slick, LXQt is all you need. @Fourdee (Daniel's) daily driver desktop!</p>
-							<div class="project-title clearfix">
-								<h3></h3>
-							</div>
+							<div class="project-title"></div>
 							<br>
 							<ul>
 								<li>Desktop can be run by typing <b style="color:orange">startx</b></li>
